# shabondama-study

./: .gitignore  AGENTS.md  README.md  mise.toml  pyproject.toml
.agents/skills/wiki-ingest/: SKILL.md
.agents/skills/wiki-lint/: SKILL.md
.agents/skills/wiki-query/: SKILL.md
data/images/bubble-detection/: ASSETS.md  manifest.json
docs/superpowers/plans/: 2026-05-23-shabom-implementation-plan.md
docs/superpowers/specs/: 2026-05-23-shabom-design.md
experiments/: exp_00_count_baseline.py  exp_01_param2_sweep.py  exp_02_maxradius_cap.py  exp_03_nms.py  exp_04_color_mask.py  exp_05_combined_v1.py  exp_06_simpleblob.py  exp_07_log_blob.py  exp_08_doh_blob.py  exp_09_depth_fg_mask.py  exp_10_iridescence_mask.py  exp_11_video_tracking.py  make_comparison_report.py
scripts/: prepare_bubble_detection_assets.py
shabom/: Cargo.toml
shabom/.cargo/: config.toml
shabom/src/: app.rs  main.rs  params.rs
shabom/src/capture/: mod.rs  screen.rs  uvc.rs
shabom/src/detect/: mod.rs  smoke.rs  transparent.rs
shabom/src/track/: mod.rs
shabom/src/ui/: controls.rs  mod.rs  preview.rs
src/shabondama_study/: __init__.py  detect.py
templates/: AGENTS-wiki-section.md
tests/: test_exp_11_video_tracking.py
wiki/: README.md  index.md  log.md
wiki/pages/: alternative-detectors-phase-2.md  bubble-detection-test-assets.md  evidence-based-agent-workflow.md  experiment-knowledge-workflow.md  hough-tuning-phase-1.md  llm-maintained-wiki.md  project-knowledge-map.md  project-purpose.md  realtime-pipeline-and-rust.md  toolchain-and-task-workflow.md  wiki-maintenance-feedback-loop.md
